creusot/tests/should_succeed/bug/269.rs
extern crate creusot_contracts;

use creusot_contracts::*;

#[open]
#[logic]
pub fn my_lemma() {}
